# m3u-to-html

./: .gitignore  Cargo.toml  README.md  example.html
src/: artistslogic.rs  buttons.rs  cache.rs  cli.rs  database.rs  error.rs  fav_playlist.m3u_playlist.html  logic.rs  main.rs  parser.rs  test.m3u_playlist.html  visual.rs  window.rs
src/css/: app.css  main.css
src/html/: album  artist  header  playlist  tail  test.html  track  {$playlistname}_playlist.html
