cargo-features = ["edition2024"]
[package]
name = "m3uHtml"
version = "1.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_6"] }
html-escape = "0.2.13"
itertools = "0.14.0"
lofty = "0.22.2"
quick-xml = "0.38.3"
reqwest = "0.12.23"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
